@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(fwi)
 export(fwi1D)
 export(fwiGrid)
 export(fwiSkill)
@@ -14,14 +13,16 @@ importFrom(abind,abind)
 importFrom(abind,asub)
 importFrom(downscaleR,aggregateGrid)
 importFrom(downscaleR,climatology)
+importFrom(downscaleR,easyVeri2grid)
 importFrom(downscaleR,getGrid)
-importFrom(downscaleR,getYearsAsINDEX)
 importFrom(downscaleR,interpGrid)
 importFrom(downscaleR,makeMultiGrid)
 importFrom(downscaleR,subsetGrid)
 importFrom(easyVerification,veriApply)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,splitIndices)
 importFrom(stats,complete.cases)
 importFrom(stats,quantile)
 importFrom(utils,write.table)
