@@ -4,8 +4,8 @@
 \alias{fwi1D}
 \title{Fire Weather Index applied to 1D data}
 \usage{
-fwi1D(months, Tm, H, r, W, lat = 46, return.all = FALSE, init.pars = c(85,
-  6, 15), spin.up = 0)
+fwi1D(months, Tm, H, r, W, lat = 46, what = "FWI", init.pars = c(85, 6,
+  15), spin.up = 0)
 }
 \arguments{
 \item{months}{Vector of integers corresponding to the months in the data}
@@ -21,8 +21,9 @@ fwi1D(months, Tm, H, r, W, lat = 46, return.all = FALSE, init.pars = c(85,
 \item{lat}{Optional. Latitude of the records (in decimal degrees). Default to 46,
 applying the default parameters of the original FWI System, developed in Canada. See Daylength Adjustment details.}
 
-\item{return.all}{Logical. Should all components of the FWI system be returned?. 
-Default to FALSE, indicating that only FWI is returned.}
+\item{what}{Character vector, indicating the components of the FWI system to be returned.
+Accepted values include any possible subset of the set \{\code{"FFMC"},\code{"DMC"},\code{"DC"}
+,\code{"BUI"},\code{"ISI"},\code{"FWI"},\code{"DSR"}\}. Default to \code{"FWI"}.}
 
 \item{init.pars}{A numeric vector of length 3 with the initialization values for the
 FFMC, DMC and DC components, in this order. Default values as proposed by van Wagner (1987).}
@@ -31,8 +32,8 @@ FFMC, DMC and DC components, in this order. Default values as proposed by van Wa
 Default to 0 (i.e. no spin-up is considered). See the dedicated Section below for further details.}
 }
 \value{
-A vector of the same length as the input vectors (minus possible missing observations),
-containing the requested components of the FWI system (either all or just FWI). See details.
+A matrix with the time (days) arranged in rows and the components selected in \code{what}
+in columns. The attribute \code{colnames} gives the component ordering.
 }
 \description{
 Implementation of the Canadian Fire Weather Index System to 1D data
@@ -47,7 +48,7 @@ Lawson and Armitage (2008).
 
 \section{FWI spin-up}{
 
-FWI is initializaed with some values for FFMC, DMC and DC components. This means that the first values of the series are not reliable,
+FWI is initialized with some values for FFMC, DMC and DC components. This means that the first values of the series are not reliable,
  until the index is iterated over several time steps and stabilizes (typically a few days suffice).
  Thus, the first index values can be optionally set to \code{NA}. The number of days at the beginning of the series to be set to \code{NA}
   is controlled via the \code{spin.up} argument.
@@ -56,10 +57,12 @@ FWI is initializaed with some values for FFMC, DMC and DC components. This means
 J. Bedia, partially based on the original FORTRAN code by van Wagner and Pickett (1985)
 }
 \references{
-Lawson, B.D. & Armitage, O.B., 2008. Weather guide for the Canadian Forest Fire Danger Rating System. Northern Forestry Centre, Edmonton (Canada).
+\itemize{
+\item Lawson, B.D. & Armitage, O.B., 2008. Weather guide for the Canadian Forest Fire Danger Rating System. Northern Forestry Centre, Edmonton (Canada).
 
-van Wagner, C.E., 1987. Development and structure of the Canadian Forest Fire Weather Index (Forestry Tech. Rep. No. 35). Canadian Forestry Service, Ottawa, Canada.
+\item van Wagner, C.E., 1987. Development and structure of the Canadian Forest Fire Weather Index (Forestry Tech. Rep. No. 35). Canadian Forestry Service, Ottawa, Canada.
 
-van Wagner, C.E., Pickett, T.L., 1985. Equations and FORTRAN program for the Canadian forest fire weather index system (Forestry Tech. Rep. No. 33). Canadian Forestry Service, Ottawa, Canada.
+\item van Wagner, C.E., Pickett, T.L., 1985. Equations and FORTRAN program for the Canadian forest fire weather index system (Forestry Tech. Rep. No. 33). Canadian Forestry Service, Ottawa, Canada.
+}
 }
 
