@@ -2,68 +2,81 @@
 % Please edit documentation in R/fwiGrid.R
 \name{fwiGrid}
 \alias{fwiGrid}
-\title{Fire Weather Index (FWI) from multigrid}
+\title{Fire Weather Index applied to multigrids}
 \usage{
-fwiGrid(multigrid, mask = NULL, return.all = FALSE, init.pars = c(85, 6,
-  15), parallel = FALSE, max.ncores = 16, ncores = NULL)
+fwiGrid(multigrid, mask = NULL, what = "FWI", nlat.chunks = NULL,
+  restart.annual = TRUE, parallel = FALSE, ncores = NULL,
+  max.ncores = 16, ...)
 }
 \arguments{
-\item{multigrid}{A multigrid of the variables needed to compute the FWI. See the Warning section}
+\item{multigrid}{containing Tm (temperature records in deg. Celsius); H (relative humidity records in \%);
+r (last 24-h accumulated precipitation in mm); W (wind velocity records in Km/h). See details.}
 
-\item{mask}{Optional. Grid of the land mask to be applied to the data.}
+\item{mask}{Optional. Binary grid (0 and 1, 0 for sea areas) with \code{dimensions} attribute \code{c("lat", "lon")}.}
 
-\item{return.all}{Logical. Should all components of the FWI system be returned?. 
-Default to FALSE, indicating that only FWI is returned.}
+\item{what}{Character string. What component of the FWI system is computed?. Default to \code{"FWI"}.
+See \code{\link{fwi1D}} for details and possible values.}
 
-\item{init.pars}{A numeric vector of length 3 with the initialization values for the
-FFMC, DMC and DC components, in this order. Default values as proposed by van Wagner (1987).}
+\item{nlat.chunks}{For an efficient memory usage, the computation of FWI can be split into 
+latitudinal bands (chunks) sepparately. The number of chunks is controlled here. 
+Default to \code{NULL} (i.e., no chunking applied).}
+
+\item{restart.annual}{Logical. Should the calculation be restarted at the beginning of every year?
+If the grid encompasses just one season (e.g. JJA...), this is the recommended option. Default to \code{TRUE}.}
 
 \item{parallel}{Logical. Should parallel execution be used?}
 
-\item{max.ncores}{Integer. Upper bound for user-defined number of cores.}
-
 \item{ncores}{Integer number of cores used in parallel computation. Self-selected number of
 cores is used when \code{ncpus = NULL} (the default), or when \code{maxcores} exceeds the default \code{ncores} value.}
+
+\item{max.ncores}{Integer. Upper bound for user-defined number of cores.}
+
+\item{...}{Further arguments passed to \code{\link{fwi1D}}.}
 }
 \value{
-A grid, containing the requested components of the FWI system (either all or just FWI). See details.
+A grid corresponding to the variable defined in argument \code{what}.
 }
 \description{
-A wrapper of function \code{\link{fwi1D}} to handle multigrids
+Implementation of the Canadian Fire Weather Index System for multigrids
 }
 \details{
-In order to efficiently handle large datasets, the function internally splits the spatial domain in convenient latitudinal chunks.
-}
-\section{Daylength adjustment factors}{
- 
-In this case, daylength adjustment factors are automatically set by the funciton according to the
- reference values indicated in p.71 and Tables A3.1 and A3.2 (p69) in Lawson and Armitage (2008).
-}
+\strong{Variable names}
 
-\section{Warning}{
-
-
-The variables composing the input multigrid need to have standard names, as defined by the dictionary
+The variables composing the input multigrid are expected to have standard names, as defined by the dictionary
  (their names are stored in the \code{multigrid$Variable$varName} component).
 These are: \code{"tas"} for temperature, \code{"tp"} for precipitation, \code{"wss"} for windspeed. In the case of relative humidity,
 either \code{"hurs"} or \code{"hursmin"} are accepted, the latter in case of FWI calculations according to the \dQuote{proxy} version
 described in Bedia \emph{et al} 2014.
 
-Be aware of the required input units.
+\strong{Landmask definition}
+
+The use of a landsmask is highly recommended when using RCM/GCM data becasue (i) there is no point in calculating
+FWI over sea areas and (ii) for computational efficiency, as sea gridboxes will be skipped before calculations.
+
+The landmask must be a grid spatially consistent with the input multigrid. You can use 
+\code{\link[downscaleR]{interpGrid}} in combination with the \code{getGrid} method to ensure this condition is fulfilled.  . Its \code{data} component can be either a 2D or 3D array with the \code{dimensions} 
+attribute \code{c("lat","lon")} or \code{c("time","lat","lon")} respectively. In the latter case, the length of the time 
+dimension should be 1. Note that values of 0 correspond to sea areas (thus discarded for FWI calculation), being land areas any other 
+values different from 0 (tipically 1 or 100, corresponding to the land/sea area fraction).   
+
+\strong{Latitudinal chunking}
+
+Splitting the calculation in latitudinal chunks is highly advisable, and absolutely necessary when
+considering large spatial domains, otherwise running out of memory during the computation. The number
+of latitudinal chunks need to be estimated on a case-by-case basis, but in general there are no restrictions in the
+number of chunks that can be used, as long as it does not exceed the number of actual latitudes 
+in the model grid.
 }
 \author{
-J. Bedia \& M.Iturbide
+J. Bedia \& M. Iturbide
 }
 \references{
-Lawson, B.D. & Armitage, O.B., 2008. Weather guide for the Canadian Forest Fire Danger Rating System. Northern Forestry Centre, Edmonton (Canada).
+\itemize{
+\item Lawson, B.D. & Armitage, O.B., 2008. Weather guide for the Canadian Forest Fire Danger Rating System. Northern Forestry Centre, Edmonton (Canada).
 
-van Wagner, C.E., 1987. Development and structure of the Canadian Forest Fire Weather Index (Forestry Tech. Rep. No. 35). Canadian Forestry Service, Ottawa, Canada.
+\item van Wagner, C.E., 1987. Development and structure of the Canadian Forest Fire Weather Index (Forestry Tech. Rep. No. 35). Canadian Forestry Service, Ottawa, Canada.
 
-van Wagner, C.E., Pickett, T.L., 1985. Equations and FORTRAN program for the Canadian forest fire weather index system (Forestry Tech. Rep. No. 33). Canadian Forestry Service, Ottawa, Canada.
-
-Bedia, J., Herrera, S., Camia, A., Moreno, J.M., Gutierrez, J.M., 2014. Forest Fire Danger Projections in the Mediterranean using ENSEMBLES Regional Climate Change Scenarios. Clim Chang 122, 185--199. doi:10.1007/s10584-013-1005-z
+\item van Wagner, C.E., Pickett, T.L., 1985. Equations and FORTRAN program for the Canadian forest fire weather index system (Forestry Tech. Rep. No. 33). Canadian Forestry Service, Ottawa, Canada.
 }
-\seealso{
-\code{\link{fwi1D}}
 }
 
